tests/warn/objects.jo
type A = {
  def (x: Int) foo(y: Int): Int  // error
}

type B = {
  def foo(n: Int): Int = n * n // error
}

def test = {
  def (x: Int) foo(y: Int): Int = x + y  // error
}
